--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="wclassth=device-wclassth, initial-scale=1.0"
     />
-    <title>CSS Responsive Project</title>
+    <title>Premeir</title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -208,7 +208,7 @@
         <h1>premeir 2024</h1>
       </div>
       <div class="footer">
-        Made BY Nobita
+        Made By Ashutosh
       </div>
     </div>
   </body>
